Next iteration - custom buffered output stream.
Signed-off-by: Tomas Langer <tomas.langer@oracle.com>