@@ -31,6 +31,7 @@ import java.util.Set;
 import java.util.WeakHashMap;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
+import java.util.function.Consumer;
 import java.util.function.Supplier;
 
 import io.helidon.common.context.Context;
@@ -51,6 +52,7 @@ import io.helidon.webserver.http.ServerRequest;
 import io.helidon.webserver.http.ServerResponse;
 
 import jakarta.ws.rs.NotFoundException;
+import jakarta.ws.rs.RuntimeType;
 import jakarta.ws.rs.core.Application;
 import jakarta.ws.rs.core.GenericType;
 import jakarta.ws.rs.core.Response;
@@ -116,20 +118,6 @@ class JaxRsService implements HttpService {
         return new JaxRsService(resourceConfig, appHandler, container);
     }
 
-    private static String basePath(UriPath path) {
-        String reqPath = path.path();
-        String absPath = path.absolute().path();
-        String basePath = absPath.substring(0, absPath.length() - reqPath.length() + 1);
-
-        if (absPath.isEmpty() || basePath.isEmpty()) {
-            return "/";
-        } else if (basePath.charAt(basePath.length() - 1) != '/') {
-            return basePath + "/";
-        } else {
-            return basePath;
-        }
-    }
-
     @Override
     public void routing(HttpRules rules) {
         rules.any(this::handle);
@@ -153,6 +141,20 @@ class JaxRsService implements HttpService {
                 LOGGER.log(Level.DEBUG, "Exception during shutdown of Jersey", e);
             }
             LOGGER.log(Level.WARNING, "Exception while shutting down Jersey's application handler " + e.getMessage());
+        }
+    }
+
+    private static String basePath(UriPath path) {
+        String reqPath = path.path();
+        String absPath = path.absolute().path();
+        String basePath = absPath.substring(0, absPath.length() - reqPath.length() + 1);
+
+        if (absPath.isEmpty() || basePath.isEmpty()) {
+            return "/";
+        } else if (basePath.charAt(basePath.length() - 1) != '/') {
+            return basePath + "/";
+        } else {
+            return basePath;
         }
     }
 
@@ -203,7 +205,12 @@ class JaxRsService implements HttpService {
                                    header.allValues());
         }
 
-        JaxRsResponseWriter writer = new JaxRsResponseWriter(res);
+        int bufferSize = CommonProperties.getValue(resourceConfig.getProperties(),
+                                                   RuntimeType.SERVER,
+                                                   CommonProperties.OUTBOUND_CONTENT_LENGTH_BUFFER,
+                                                   4096,
+                                                   Integer.class);
+        JaxRsResponseWriter writer = new JaxRsResponseWriter(res, bufferSize);
         requestContext.setWriter(writer);
         requestContext.setEntityStream(new LazyInputStream(req));
         requestContext.setProperty("io.helidon.jaxrs.remote-host", req.remotePeer().host());
@@ -304,10 +311,13 @@ class JaxRsService implements HttpService {
     private static class JaxRsResponseWriter implements ContainerResponseWriter {
         private final CountDownLatch cdl = new CountDownLatch(1);
         private final ServerResponse res;
+        private final int bufferSize;
+
         private OutputStream outputStream;
 
-        private JaxRsResponseWriter(ServerResponse res) {
+        private JaxRsResponseWriter(ServerResponse res, int bufferSize) {
             this.res = res;
+            this.bufferSize = bufferSize;
         }
 
         @Override
@@ -324,7 +334,7 @@ class JaxRsService implements HttpService {
                 String name = entry.getKey();
                 List<String> values = entry.getValue();
                 if (values.size() == 1) {
-                    res.header(HeaderValues.create(HeaderNames.create(name), values.get(0)));
+                    res.header(HeaderValues.create(HeaderNames.create(name), values.getFirst()));
                 } else {
                     res.header(HeaderValues.create(entry.getKey(), entry.getValue()));
                 }
@@ -332,10 +342,15 @@ class JaxRsService implements HttpService {
             Response.StatusType statusInfo = containerResponse.getStatusInfo();
             res.status(Status.create(statusInfo.getStatusCode(), statusInfo.getReasonPhrase()));
 
-            if (contentLength > 0) {
+            if (contentLength > 0 || bufferSize <= 1) {
                 res.header(HeaderValues.create(HeaderNames.CONTENT_LENGTH, String.valueOf(contentLength)));
+                this.outputStream = res.outputStream();
+            } else {
+                this.outputStream = new BufferingOutputStream(res::outputStream,
+                                                              res::contentLength,
+                                                              bufferSize);
             }
-            this.outputStream = res.outputStream();
+
             return outputStream;
         }
 
@@ -379,7 +394,12 @@ class JaxRsService implements HttpService {
 
         @Override
         public boolean enableResponseBuffering() {
-            return true;        // enable buffering in Jersey
+            /*
+            When we enable buffering, Jersey nicely buffers the data until commit is called.
+            Unfortunately it ignores calls to `flush()` on output stream handler, preventing user
+            intended network calls (as the call is only done on buffer overflow).
+             */
+            return false;
         }
 
         public void await() {
@@ -410,6 +430,93 @@ class JaxRsService implements HttpService {
                 requestPath = requestPath + "?" + req.query().rawValue();
             }
             return new BaseUriRequestUri(URI.create(serverBasePath), URI.create(requestPath));
+        }
+    }
+
+    static class BufferingOutputStream extends OutputStream {
+        private final Supplier<OutputStream> delegateSupplier;
+        private final Consumer<Integer> contentLengthConsumer;
+        private final byte[] buffer;
+
+        private OutputStream delegate;
+        private int position;
+        private boolean written;
+
+        BufferingOutputStream(Supplier<OutputStream> delegateSupplier,
+                              Consumer<Integer> contentLengthConsumer,
+                              int bufferSize) {
+            this.delegateSupplier = delegateSupplier;
+            this.contentLengthConsumer = contentLengthConsumer;
+            this.buffer = new byte[bufferSize];
+        }
+
+        @Override
+        public void write(int b) throws IOException {
+            if (buffer.length - position >= 1) {
+                buffer[position++] = (byte) b;
+            } else {
+                ensureDelegate();
+                delegate.write(buffer, 0, position);
+                written = true;
+                position = 1;
+                buffer[0] = (byte) b;
+            }
+        }
+
+        @Override
+        public void write(byte[] b) throws IOException {
+            write(b, 0, b.length);
+        }
+
+        @Override
+        public void write(byte[] b, int off, int len) throws IOException {
+            if (buffer.length - position >= len) {
+                // add to buffer
+                System.arraycopy(b, off, buffer, position, len);
+                position += len;
+            } else {
+                ensureDelegate();
+                delegate.write(buffer, 0, position);
+                written = true;
+                if (len < buffer.length) {
+                    // add to buffer
+                    System.arraycopy(b, off, buffer, position, len);
+                    position = len;
+                } else {
+                    // bigger than buffer, write-through
+                    delegate.write(b, off, len);
+                    position = 0;
+                }
+            }
+        }
+
+        @Override
+        public void flush() throws IOException {
+            if (position == 0 && !written) {
+                // no op if nothing was written
+                return;
+            }
+            ensureDelegate();
+            delegate.write(buffer, 0, position);
+            written = true;
+            delegate.flush();
+            position = 0;
+        }
+
+        @Override
+        public void close() throws IOException {
+            if (!written) {
+                contentLengthConsumer.accept(position);
+            }
+            ensureDelegate();
+            flush();
+            delegate.close();
+        }
+
+        private void ensureDelegate() {
+            if (delegate == null) {
+                delegate = delegateSupplier.get();
+            }
         }
     }
 }
